--- a/customer/templates/customer/custhome.html
+++ b/customer/templates/customer/custhome.html
@@ -32,7 +32,9 @@
         </div>
       </div>
       {% block content %}
-      <div class="col-md-10">
+      }
+
+        </div><div class="col-md-10">
         <div class="row">
           {% for product in prods %}
           <div class="col-4 mt-3">
@@ -46,9 +48,7 @@
               </div>
             </div>
           </div>
-          {% endfor %}
-
-        </div>
+          {% endfor %
       </div>
 
     </div>
